Made Some changes in the projects and images

--- a/app/config.json
+++ b/app/config.json
@@ -1,11 +1,11 @@
 {
-  "name": "Hamish Williams",
-  "role": "Designer",
-  "disciplines": ["Developer", "Prototyper", "Animator", "Illustrator", "Modder"],
-  "url": "https://hamishw.com",
-  "twitter": "@hamishMW",
+  "name": "Nihar Patel",
+  "role": "Quant Developer",
+  "disciplines": ["Developer", "Simulator", "Mathematician", "Researcher", "Analyst"],
+  "url": "https://nihar0071.com",
+  "twitter": "@NiharR007997",
   "figma": "@Hamish",
-  "github": "HamishMW",
-  "repo": "https://github.com/HamishMW/portfolio",
+  "github": "Nihar0071",
+  "repo": "https://github.com/Nihar0071/portfolio",
   "ascii": "__  __  __\n\u005C \u005C \u005C \u005C \u005C\u2215\n \u005C \u005C\u2215\u005C \u005C\n  \u005C\u2215  \u005C\u2215\n"
 }
