--- a/app/config.json
+++ b/app/config.json
@@ -1,10 +1,10 @@
 {
   "name": "Nihar Patel",
   "role": "Quant Developer",
-  "disciplines": ["Developer", "Simulator", "Mathematician", "Researcher", "Analyst"],
+  "disciplines": [ "Researcher" ],
   "url": "https://nihar0071.com",
   "twitter": "@NiharR007997",
-  "figma": "@Hamish",
+  "figma": "niharpatel007rd",
   "github": "Nihar0071",
   "repo": "https://github.com/Nihar0071/portfolio",
   "ascii": "__  __  __\n\u005C \u005C \u005C \u005C \u005C\u2215\n \u005C \u005C\u2215\u005C \u005C\n  \u005C\u2215  \u005C\u2215\n"
